# FanPulse-AI

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package.json  vercel.json
.github/workflows/: ci.yml
api/: index.py
backend/: pyproject.toml  requirements.txt  test_config.py  test_genai.py  test_security.py  test_types.py
backend/app/: __init__.py  config.py  main.py
backend/app/data/: simulator.py
backend/app/data/fixtures/: facilities.json  faq.json  transport.json  zones.json
backend/app/gemini/: __init__.py  cache.py  client.py  prompts.py
backend/app/middleware/: error_handler.py
backend/app/models/: fan.py  staff.py
backend/app/routers/: fan.py  staff.py
backend/tests/: conftest.py  test_fan_router.py  test_gemini_service.py  test_simulator.py  test_staff_router.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/common/: Header.css  Header.jsx
frontend/src/components/fan/: ChatInput.css  ChatInput.jsx  ChatMessage.css  ChatMessage.jsx  ChatWindow.css  ChatWindow.jsx  FanView.css  FanView.jsx
frontend/src/components/staff/: AlertsFeed.css  AlertsFeed.jsx  CrowdHeatmap.css  CrowdHeatmap.jsx  StaffView.css  StaffView.jsx  SummaryReport.css  SummaryReport.jsx
frontend/src/hooks/: useAccessibility.js  useChat.js  useDebounce.js
frontend/src/services/: api.js
frontend/src/test/: ChatInput.test.jsx
