[project]
name = "fanpulse-ai-backend"
version = "1.0.0"
description = "FanPulse AI — GenAI Stadium Companion Backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 99
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
]
ignore = [
    "S104",  # Possible binding to all interfaces (we need 0.0.0.0 for dev)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["^tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
